[gd_scene load_steps=7 format=4 uid="uid://sb5qw0ue2vc4"]

[ext_resource type="Script" uid="uid://buj6ft1vvdf2f" path="res://addons/hexagon_tilemaplayer/hexagon_tilemaplayer.gd" id="1_3viof"]
[ext_resource type="Script" uid="uid://c5t8k8u70hsgr" path="res://addons/hexagon_tilemaplayer/demo/demo.gd" id="1_5hvkt"]
[ext_resource type="TileSet" uid="uid://brm40hxx3wp8n" path="res://addons/hexagon_tilemaplayer/demo/horizontal_tile_set.tres" id="2_2pem3"]
[ext_resource type="TileSet" uid="uid://l4anov1m1f53" path="res://addons/hexagon_tilemaplayer/demo/vertical_tile_set.tres" id="2_i68m5"]
[ext_resource type="Script" uid="uid://t5kjk00fsm7k" path="res://addons/hexagon_tilemaplayer/demo/camera_movement.gd" id="4_2pem3"]

[sub_resource type="ButtonGroup" id="ButtonGroup_2pem3"]

[node name="Demo" type="Node2D"]
script = ExtResource("1_5hvkt")

[node name="HexagonTileMapLayerHorizontal" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAD//wEAAQAAAAAAAQAAAAEAAQAAAAAAAQABAAAAAQAAAAAAAQAAAP//AQAAAAAAAQD/////AQAAAAAAAQD//wAAAQAAAAAAAQD9/wAAAQAAAAAAAQD8////AQAAAAAAAQD9//7/AQAAAAAAAQD9//3/AQAAAAAAAQD+//3/AQAAAAAAAQD///3/AQAAAAAAAQAAAP3/AQAAAAAAAQABAP3/AQAAAAAAAQACAP3/AQAAAAAAAQADAP7/AQAAAAAAAQADAP//AQAAAAAAAQAEAAAAAQAAAAAAAQADAAEAAQAAAAAAAQAEAAIAAQAAAAAAAQADAAIAAQAAAAAAAQADAAMAAQAAAAAAAQACAAMAAQAAAAAAAQABAAMAAQAAAAAAAQABAAQAAQAAAAAAAQAAAAQAAQAAAAAAAQD//wQAAQAAAAAAAQD+/wQAAQAAAAAAAQD9/wMAAQAAAAAAAQD8/wMAAQAAAAAABQD9/wIAAQAAAAAABQD8/wIAAQAAAAAABQD7/wEAAQAAAAAABQD6/wEAAQAAAAAAAQD7/wAAAQAAAAAABQD7////AQAAAAAABQD8//7/AQAAAAAABQD8//3/AQAAAAAAAQD9//z/AQAAAAAAAQD+//z/AQAAAAAAAQD///z/AQAAAAAAAQAAAPz/AQAAAAAAAQAAAPv/AQAAAAAAAQABAPv/AQAAAAAAAQD///v/AQAAAAAAAQABAPz/AQAAAAAAAQACAPz/AQAAAAAAAQABAAEAAQAAAAAAAQACAAAAAQAAAAAAAQACAP//AQAAAAAAAQACAP7/AQAAAAAAAQABAP7/AQAAAAAAAQAAAP7/AQAAAAAAAQD///7/AQAAAAAAAQD+//7/AQAAAAAAAQD9////AQAAAAAAAQD+/wAAAQAAAAAAAQD+////AQAAAAAAAQD9/wEAAQAAAAAAAQD8/wEAAQAAAAAABQD8/wAAAQAAAAAABQD+/wIAAQAAAAAAAQD+/wEAAQAAAAAAAQD//wIAAQAAAAAAAQD+/wMAAQAAAAAAAQD//wMAAQAAAAAAAQAAAAIAAQAAAAAAAQAAAAMAAQAAAAAAAQABAAIAAQAAAAAAAQACAAIAAQAAAAAAAQACAAEAAQAAAAAAAQADAAAAAQAAAAAAAQABAP//AQAAAAAAAQD2//f/AQAAAAAAAgD2//j/AQAAAAAAAgD2//n/AQAAAAAAAgD2//r/AQAAAAAAAgD2//v/AQAAAAAAAgD2//z/AQAAAAAAAgD2//3/AQAAAAAAAgD2//7/AQAAAAAAAgD2////AQAAAAAAAgD2/wAAAQAAAAAAAgD2/wEAAQAAAAAAAgD2/wIAAQAAAAAAAgD2/wMAAQAAAAAAAgD2/wQAAQAAAAAAAgD2/wUAAQAAAAAAAgD2/wYAAQAAAAAAAgD2/wcAAQAAAAAAAgD2/wgAAQAAAAAAAgD3//f/AQAAAAAAAgD3//j/AQAAAAAAAgD3//n/AQAAAAAAAgD3//r/AQAAAAAAAgD3//v/AQAAAAAAAgD3//z/AQAAAAAAAgD3//3/AQAAAAAAAgD3//7/AQAAAAAAAgD3////AQAAAAAAAgD3/wAAAQAAAAAAAgD3/wEAAQAAAAAAAgD3/wIAAQAAAAAAAgD3/wMAAQAAAAAAAgD3/wQAAQAAAAAAAgD3/wUAAQAAAAAAAgD3/wYAAQAAAAAAAgD3/wcAAQAAAAAAAgD3/wgAAQAAAAAAAgD4//f/AQAAAAAAAgD4//j/AQAAAAAAAgD4//n/AQAAAAAAAgD4//r/AQAAAAAAAgD4//v/AQAAAAAAAgD4//z/AQAAAAAAAgD4//3/AQAAAAAAAgD4//7/AQAAAAAAAgD4////AQAAAAAAAgD4/wAAAQAAAAAAAgD4/wEAAQAAAAAAAgD4/wIAAQAAAAAAAgD4/wMAAQAAAAAAAgD4/wQAAQAAAAAAAgD4/wUAAQAAAAAAAgD4/wYAAQAAAAAAAgD4/wcAAQAAAAAAAgD4/wgAAQAAAAAAAgD5//f/AQAAAAAAAgD5//j/AQAAAAAAAgD5//n/AQAAAAAAAgD5//r/AQAAAAAAAgD5//v/AQAAAAAAAQD5//z/AQAAAAAAAQD5//3/AQAAAAAAAQD5//7/AQAAAAAAAQD5////AQAAAAAAAQD5/wAAAQAAAAAAAQD5/wEAAQAAAAAAAQD5/wIAAQAAAAAAAgD5/wMAAQAAAAAAAgD5/wQAAQAAAAAAAgD5/wUAAQAAAAAAAgD5/wYAAQAAAAAAAgD5/wcAAQAAAAAAAgD5/wgAAQAAAAAAAgD6//f/AQAAAAAAAgD6//j/AQAAAAAAAgD6//n/AQAAAAAAAgD6//r/AQAAAAAAAgD6//v/AQAAAAAAAQD6//z/AQAAAAAAAQD6//3/AQAAAAAABQD6//7/AQAAAAAABQD6////AQAAAAAABQD6/wAAAQAAAAAAAQD6/wIAAQAAAAAAAQD6/wMAAQAAAAAAAQD6/wQAAQAAAAAAAgD6/wUAAQAAAAAAAgD6/wYAAQAAAAAAAgD6/wcAAQAAAAAAAgD6/wgAAQAAAAAAAgD7//f/AQAAAAAAAgD7//j/AQAAAAAAAgD7//n/AQAAAAAAAgD7//r/AQAAAAAAAgD7//v/AQAAAAAAAQD7//z/AQAAAAAABQD7//3/AQAAAAAABQD7//7/AQAAAAAABQD7/wIAAQAAAAAAAQD7/wMAAQAAAAAAAQD7/wQAAQAAAAAAAQD7/wUAAQAAAAAAAQD7/wYAAQAAAAAAAgD7/wcAAQAAAAAAAgD7/wgAAQAAAAAAAgD8//f/AQAAAAAAAgD8//j/AQAAAAAAAgD8//n/AQAAAAAAAgD8//r/AQAAAAAAAgD8//v/AQAAAAAAAQD8//z/AQAAAAAABQD8/wQAAQAAAAAAAQD8/wUAAQAAAAAAAQD8/wYAAQAAAAAAAgD8/wcAAQAAAAAAAgD8/wgAAQAAAAAAAgD9//f/AQAAAAAAAgD9//j/AQAAAAAAAgD9//n/AQAAAAAAAgD9//r/AQAAAAAAAQD9//v/AQAAAAAAAQD9/wQAAQAAAAAAAQD9/wUAAQAAAAAAAQD9/wYAAQAAAAAAAgD9/wcAAQAAAAAAAgD9/wgAAQAAAAAAAgD+//f/AQAAAAAAAgD+//j/AQAAAAAAAgD+//n/AQAAAAAAAQD+//r/AQAAAAAAAQD+//v/AQAAAAAAAQD+/wUAAQAAAAAAAQD+/wYAAQAAAAAAAgD+/wcAAQAAAAAAAgD+/wgAAQAAAAAAAgD///f/AQAAAAAAAgD///j/AQAAAAAAAgD///n/AQAAAAAAAQD///r/AQAAAAAAAQD//wUAAQAAAAAAAQD//wYAAQAAAAAAAgD//wcAAQAAAAAAAgD//wgAAQAAAAAAAgAAAPf/AQAAAAAAAgAAAPj/AQAAAAAAAgAAAPn/AQAAAAAAAgAAAPr/AQAAAAAAAQAAAAUAAQAAAAAAAgAAAAYAAQAAAAAAAgAAAAcAAQAAAAAAAgAAAAgAAQAAAAAAAgABAPf/AQAAAAAAAgABAPj/AQAAAAAAAgABAPn/AQAAAAAAAgABAPr/AQAAAAAAAQABAAUAAQAAAAAAAQABAAYAAQAAAAAAAgABAAcAAQAAAAAAAgABAAgAAQAAAAAAAgACAPf/AQAAAAAAAgACAPj/AQAAAAAAAgACAPn/AQAAAAAAAgACAPr/AQAAAAAAAQACAPv/AQAAAAAAAQACAAQAAQAAAAAAAQACAAUAAQAAAAAAAQACAAYAAQAAAAAAAQACAAcAAQAAAAAAAgACAAgAAQAAAAAAAgADAPf/AQAAAAAAAgADAPj/AQAAAAAAAgADAPn/AQAAAAAAAgADAPr/AQAAAAAAAQADAPv/AQAAAAAAAQADAPz/AQAAAAAAAQADAP3/AQAAAAAAAQADAAQAAQAAAAAAAQADAAUAAQAAAAAAAQADAAYAAQAAAAAAAQADAAcAAQAAAAAAAgADAAgAAQAAAAAAAgAEAPf/AQAAAAAAAgAEAPj/AQAAAAAAAgAEAPn/AQAAAAAAAgAEAPr/AQAAAAAAAQAEAPv/AQAAAAAAAQAEAPz/AQAAAAAAAQAEAP3/AQAAAAAAAQAEAP7/AQAAAAAAAQAEAP//AQAAAAAAAQAEAAEAAQAAAAAAAQAEAAMAAQAAAAAAAQAEAAQAAQAAAAAAAQAEAAUAAQAAAAAAAQAEAAYAAQAAAAAAAQAEAAcAAQAAAAAAAgAEAAgAAQAAAAAAAgAFAPf/AQAAAAAAAgAFAPj/AQAAAAAAAgAFAPn/AQAAAAAAAgAFAPr/AQAAAAAAAgAFAPv/AQAAAAAAAgAFAPz/AQAAAAAAAgAFAP3/AQAAAAAAAgAFAP7/AQAAAAAAAQAFAP//AQAAAAAAAQAFAAAAAQAAAAAAAQAFAAEAAQAAAAAAAQAFAAIAAQAAAAAAAQAFAAMAAQAAAAAAAQAFAAQAAQAAAAAAAQAFAAUAAQAAAAAAAgAFAAYAAQAAAAAAAgAFAAcAAQAAAAAAAgAFAAgAAQAAAAAAAgAGAPf/AQAAAAAAAgAGAPj/AQAAAAAAAgAGAPn/AQAAAAAAAgAGAPr/AQAAAAAAAgAGAPv/AQAAAAAAAgAGAPz/AQAAAAAAAgAGAP3/AQAAAAAAAgAGAP7/AQAAAAAAAgAGAP//AQAAAAAAAgAGAAAAAQAAAAAAAQAGAAEAAQAAAAAAAgAGAAIAAQAAAAAAAQAGAAMAAQAAAAAAAgAGAAQAAQAAAAAAAgAGAAUAAQAAAAAAAgAGAAYAAQAAAAAAAgAGAAcAAQAAAAAAAgAGAAgAAQAAAAAAAgAHAPf/AQAAAAAAAgAHAPj/AQAAAAAAAgAHAPn/AQAAAAAAAgAHAPr/AQAAAAAAAgAHAPv/AQAAAAAAAgAHAPz/AQAAAAAAAgAHAP3/AQAAAAAAAgAHAP7/AQAAAAAAAgAHAP//AQAAAAAAAgAHAAAAAQAAAAAAAgAHAAEAAQAAAAAAAgAHAAIAAQAAAAAAAgAHAAMAAQAAAAAAAgAHAAQAAQAAAAAAAgAHAAUAAQAAAAAAAgAHAAYAAQAAAAAAAgAHAAcAAQAAAAAAAgAHAAgAAQAAAAAAAgAIAPf/AQAAAAAAAgAIAPj/AQAAAAAAAgAIAPn/AQAAAAAAAgAIAPr/AQAAAAAAAgAIAPv/AQAAAAAAAgAIAPz/AQAAAAAAAgAIAP3/AQAAAAAAAgAIAP7/AQAAAAAAAgAIAP//AQAAAAAAAgAIAAAAAQAAAAAAAgAIAAEAAQAAAAAAAgAIAAIAAQAAAAAAAgAIAAMAAQAAAAAAAgAIAAQAAQAAAAAAAgAIAAUAAQAAAAAAAgAIAAYAAQAAAAAAAgAIAAcAAQAAAAAAAgAIAAgAAQAAAAAAAgAJAPf/AQAAAAAAAgAJAPj/AQAAAAAAAgAJAPn/AQAAAAAAAgAJAPr/AQAAAAAAAgAJAPv/AQAAAAAAAgAJAPz/AQAAAAAAAgAJAP3/AQAAAAAAAgAJAP7/AQAAAAAAAgAJAP//AQAAAAAAAgAJAAAAAQAAAAAAAgAJAAEAAQAAAAAAAgAJAAIAAQAAAAAAAgAJAAMAAQAAAAAAAgAJAAQAAQAAAAAAAgAJAAUAAQAAAAAAAgAJAAYAAQAAAAAAAgAJAAcAAQAAAAAAAgAJAAgAAQAAAAAAAgAKAPf/AQAAAAAAAgAKAPj/AQAAAAAAAgAKAPn/AQAAAAAAAgAKAPr/AQAAAAAAAgAKAPv/AQAAAAAAAgAKAPz/AQAAAAAAAgAKAP3/AQAAAAAAAgAKAP7/AQAAAAAAAgAKAP//AQAAAAAAAgAKAAAAAQAAAAAAAgAKAAEAAQAAAAAAAgAKAAIAAQAAAAAAAgAKAAMAAQAAAAAAAgAKAAQAAQAAAAAAAgAKAAUAAQAAAAAAAgAKAAYAAQAAAAAAAgAKAAcAAQAAAAAAAgAKAAgAAQAAAAAAAgALAPf/AQAAAAAAAgALAPj/AQAAAAAAAgALAPn/AQAAAAAAAgALAPr/AQAAAAAAAgALAPv/AQAAAAAAAgALAPz/AQAAAAAAAgALAP3/AQAAAAAAAgALAP7/AQAAAAAAAgALAP//AQAAAAAAAgALAAAAAQAAAAAAAgALAAEAAQAAAAAAAgALAAIAAQAAAAAAAgALAAMAAQAAAAAAAgALAAQAAQAAAAAAAgALAAUAAQAAAAAAAgALAAYAAQAAAAAAAgALAAcAAQAAAAAAAgALAAgAAQAAAAAAAgD0//f/AQAAAAAAAgD0//j/AQAAAAAAAgD0//n/AQAAAAAAAgD0//r/AQAAAAAAAgD0//v/AQAAAAAAAgD0//z/AQAAAAAAAgD0//3/AQAAAAAAAgD0//7/AQAAAAAAAgD0////AQAAAAAAAgD0/wAAAQAAAAAAAgD0/wEAAQAAAAAAAgD0/wIAAQAAAAAAAgD0/wMAAQAAAAAAAgD0/wQAAQAAAAAAAgD0/wUAAQAAAAAAAgD0/wYAAQAAAAAAAgD0/wcAAQAAAAAAAgD0/wgAAQAAAAAAAgD1//f/AQAAAAAAAgD1//j/AQAAAAAAAgD1//n/AQAAAAAAAgD1//r/AQAAAAAAAgD1//v/AQAAAAAAAgD1//z/AQAAAAAAAgD1//3/AQAAAAAAAgD1//7/AQAAAAAAAgD1////AQAAAAAAAgD1/wAAAQAAAAAAAgD1/wEAAQAAAAAAAgD1/wIAAQAAAAAAAgD1/wMAAQAAAAAAAgD1/wQAAQAAAAAAAgD1/wUAAQAAAAAAAgD1/wYAAQAAAAAAAgD1/wcAAQAAAAAAAgD1/wgAAQAAAAAAAgDx//f/AQAAAAAAAgDx//j/AQAAAAAAAgDx//n/AQAAAAAAAgDx//r/AQAAAAAAAgDx//v/AQAAAAAAAgDx//z/AQAAAAAAAgDx//3/AQAAAAAAAgDx//7/AQAAAAAAAgDx////AQAAAAAAAgDx/wAAAQAAAAAAAgDx/wEAAQAAAAAAAgDx/wIAAQAAAAAAAgDx/wMAAQAAAAAAAgDx/wQAAQAAAAAAAgDx/wUAAQAAAAAAAgDx/wYAAQAAAAAAAgDx/wcAAQAAAAAAAgDx/wgAAQAAAAAAAgDy//f/AQAAAAAAAgDy//j/AQAAAAAAAgDy//n/AQAAAAAAAgDy//r/AQAAAAAAAgDy//v/AQAAAAAAAgDy//z/AQAAAAAAAgDy//3/AQAAAAAAAgDy//7/AQAAAAAAAgDy////AQAAAAAAAgDy/wAAAQAAAAAAAgDy/wEAAQAAAAAAAgDy/wIAAQAAAAAAAgDy/wMAAQAAAAAAAgDy/wQAAQAAAAAAAgDy/wUAAQAAAAAAAgDy/wYAAQAAAAAAAgDy/wcAAQAAAAAAAgDy/wgAAQAAAAAAAgDz//f/AQAAAAAAAgDz//j/AQAAAAAAAgDz//n/AQAAAAAAAgDz//r/AQAAAAAAAgDz//v/AQAAAAAAAgDz//z/AQAAAAAAAgDz//3/AQAAAAAAAgDz//7/AQAAAAAAAgDz////AQAAAAAAAgDz/wAAAQAAAAAAAgDz/wEAAQAAAAAAAgDz/wIAAQAAAAAAAgDz/wMAAQAAAAAAAgDz/wQAAQAAAAAAAgDz/wUAAQAAAAAAAgDz/wYAAQAAAAAAAgDz/wcAAQAAAAAAAgDz/wgAAQAAAAAAAgAMAPf/AQAAAAAAAgAMAPj/AQAAAAAAAgAMAPn/AQAAAAAAAgAMAPr/AQAAAAAAAgAMAPv/AQAAAAAAAgAMAPz/AQAAAAAAAgAMAP3/AQAAAAAAAgAMAP7/AQAAAAAAAgAMAP//AQAAAAAAAgAMAAAAAQAAAAAAAgAMAAEAAQAAAAAAAgAMAAIAAQAAAAAAAgAMAAMAAQAAAAAAAgAMAAQAAQAAAAAAAgAMAAUAAQAAAAAAAgAMAAYAAQAAAAAAAgAMAAcAAQAAAAAAAgAMAAgAAQAAAAAAAgANAPf/AQAAAAAAAgANAPj/AQAAAAAAAgANAPn/AQAAAAAAAgANAPr/AQAAAAAAAgANAPv/AQAAAAAAAgANAPz/AQAAAAAAAgANAP3/AQAAAAAAAgANAP7/AQAAAAAAAgANAP//AQAAAAAAAgANAAAAAQAAAAAAAgANAAEAAQAAAAAAAgANAAIAAQAAAAAAAgANAAMAAQAAAAAAAgANAAQAAQAAAAAAAgANAAUAAQAAAAAAAgANAAYAAQAAAAAAAgANAAcAAQAAAAAAAgANAAgAAQAAAAAAAgAOAPf/AQAAAAAAAgAOAPj/AQAAAAAAAgAOAPn/AQAAAAAAAgAOAPr/AQAAAAAAAgAOAPv/AQAAAAAAAgAOAPz/AQAAAAAAAgAOAP3/AQAAAAAAAgAOAP7/AQAAAAAAAgAOAP//AQAAAAAAAgAOAAAAAQAAAAAAAgAOAAEAAQAAAAAAAgAOAAIAAQAAAAAAAgAOAAMAAQAAAAAAAgAOAAQAAQAAAAAAAgAOAAUAAQAAAAAAAgAOAAYAAQAAAAAAAgAOAAcAAQAAAAAAAgAOAAgAAQAAAAAAAgA=")
tile_set = ExtResource("2_2pem3")
script = ExtResource("1_3viof")
pathfinding_enabled = true
debug_mode = 1
metadata/_custom_type_script = "uid://buj6ft1vvdf2f"

[node name="HexagonTileMapLayerVertical" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AADv//j/AQAAAAAAAgDv//n/AQAAAAAAAgDv//r/AQAAAAAAAgDv//v/AQAAAAAAAgDv//z/AQAAAAAAAgDv//3/AQAAAAAAAgDv//7/AQAAAAAAAgDv////AQAAAAAAAgDv/wAAAQAAAAAAAgDv/wEAAQAAAAAAAgDv/wIAAQAAAAAAAgDv/wMAAQAAAAAAAgDv/wQAAQAAAAAAAgDv/wUAAQAAAAAAAgDv/wYAAQAAAAAAAgDv/wcAAQAAAAAAAgDw//j/AQAAAAAAAgDw//n/AQAAAAAAAgDw//r/AQAAAAAAAgDw//v/AQAAAAAAAgDw//z/AQAAAAAAAgDw//3/AQAAAAAAAgDw//7/AQAAAAAAAgDw////AQAAAAAAAgDw/wAAAQAAAAAAAgDw/wEAAQAAAAAAAgDw/wIAAQAAAAAAAgDw/wMAAQAAAAAAAgDw/wQAAQAAAAAAAgDw/wUAAQAAAAAAAgDw/wYAAQAAAAAAAgDw/wcAAQAAAAAAAgDx//j/AQAAAAAAAgDx//n/AQAAAAAAAgDx//r/AQAAAAAAAgDx//v/AQAAAAAAAgDx//z/AQAAAAAAAgDx//3/AQAAAAAAAgDx//7/AQAAAAAAAgDx////AQAAAAAAAgDx/wAAAQAAAAAAAgDx/wEAAQAAAAAAAgDx/wIAAQAAAAAAAgDx/wMAAQAAAAAAAgDx/wQAAQAAAAAAAgDx/wUAAQAAAAAAAgDx/wYAAQAAAAAAAgDx/wcAAQAAAAAAAgDy//j/AQAAAAAAAgDy//n/AQAAAAAAAgDy//r/AQAAAAAAAgDy//v/AQAAAAAAAgDy//z/AQAAAAAAAgDy//3/AQAAAAAAAgDy//7/AQAAAAAAAgDy////AQAAAAAAAgDy/wAAAQAAAAAAAgDy/wEAAQAAAAAAAgDy/wIAAQAAAAAAAgDy/wMAAQAAAAAAAgDy/wQAAQAAAAAAAgDy/wUAAQAAAAAAAgDy/wYAAQAAAAAAAgDy/wcAAQAAAAAAAgDz//j/AQAAAAAAAgDz//n/AQAAAAAAAgDz//r/AQAAAAAAAgDz//v/AQAAAAAAAgDz//z/AQAAAAAAAgDz//3/AQAAAAAAAgDz//7/AQAAAAAAAgDz////AQAAAAAAAgDz/wAAAQAAAAAAAgDz/wEAAQAAAAAAAgDz/wIAAQAAAAAAAgDz/wMAAQAAAAAAAgDz/wQAAQAAAAAAAgDz/wUAAQAAAAAAAgDz/wYAAQAAAAAAAgDz/wcAAQAAAAAAAgD0//j/AQAAAAAAAgD0//n/AQAAAAAAAgD0//r/AQAAAAAAAgD0//v/AQAAAAAAAgD0//z/AQAAAAAAAgD0//3/AQAAAAAAAgD0//7/AQAAAAAAAgD0////AQAAAAAAAgD0/wAAAQAAAAAAAgD0/wEAAQAAAAAAAgD0/wIAAQAAAAAAAgD0/wMAAQAAAAAAAgD0/wQAAQAAAAAAAgD0/wUAAQAAAAAAAgD0/wYAAQAAAAAAAgD0/wcAAQAAAAAAAgD1//j/AQAAAAAAAgD1//n/AQAAAAAAAgD1//r/AQAAAAAAAgD1//v/AQAAAAAAAgD1//z/AQAAAAAAAgD1//3/AQAAAAAAAgD1//7/AQAAAAAAAgD1////AQAAAAAAAgD1/wAAAQAAAAAAAgD1/wEAAQAAAAAAAgD1/wIAAQAAAAAAAgD1/wMAAQAAAAAAAgD1/wQAAQAAAAAAAgD1/wUAAQAAAAAAAgD1/wYAAQAAAAAAAgD1/wcAAQAAAAAAAgD2//j/AQAAAAAAAgD2//n/AQAAAAAAAgD2//r/AQAAAAAAAgD2//v/AQAAAAAAAgD2//z/AQAAAAAAAgD2//3/AQAAAAAAAgD2//7/AQAAAAAAAgD2////AQAAAAAAAgD2/wAAAQAAAAAAAgD2/wEAAQAAAAAAAgD2/wIAAQAAAAAAAgD2/wMAAQAAAAAAAgD2/wQAAQAAAAAAAgD2/wUAAQAAAAAAAgD2/wYAAQAAAAAAAgD2/wcAAQAAAAAAAgD3//j/AQAAAAAAAgD3//n/AQAAAAAAAgD3//r/AQAAAAAAAgD3//v/AQAAAAAAAgD3//z/AQAAAAAAAgD3//3/AQAAAAAAAgD3//7/AQAAAAAAAgD3////AQAAAAAAAgD3/wAAAQAAAAAAAgD3/wEAAQAAAAAAAgD3/wIAAQAAAAAAAgD3/wMAAQAAAAAAAgD3/wQAAQAAAAAAAgD3/wUAAQAAAAAAAgD3/wYAAQAAAAAAAgD3/wcAAQAAAAAAAgD4//j/AQAAAAAAAgD4//n/AQAAAAAAAgD4//r/AQAAAAAAAgD4//v/AQAAAAAAAgD4//z/AQAAAAAAAQD4//3/AQAAAAAAAQD4//7/AQAAAAAAAQD4////AQAAAAAAAQD4/wAAAQAAAAAAAQD4/wEAAQAAAAAAAQD4/wIAAQAAAAAAAgD4/wMAAQAAAAAAAgD4/wQAAQAAAAAAAgD4/wUAAQAAAAAAAgD4/wYAAQAAAAAAAgD4/wcAAQAAAAAAAgD5//j/AQAAAAAAAgD5//n/AQAAAAAAAgD5//r/AQAAAAAAAgD5//v/AQAAAAAAAQD5//z/AQAAAAAAAQD5//3/AQAAAAAAAQD5//7/AQAAAAAABQD5////AQAAAAAAAQD5/wAAAQAAAAAAAQD5/wEAAQAAAAAAAQD5/wIAAQAAAAAAAQD5/wMAAQAAAAAAAgD5/wQAAQAAAAAAAgD5/wUAAQAAAAAAAgD5/wYAAQAAAAAAAgD5/wcAAQAAAAAAAgD6//j/AQAAAAAAAgD6//n/AQAAAAAAAgD6//r/AQAAAAAAAgD6//v/AQAAAAAAAgD6//z/AQAAAAAAAQD6//3/AQAAAAAABQD6//7/AQAAAAAABQD6////AQAAAAAABQD6/wAAAQAAAAAABQD6/wEAAQAAAAAAAQD6/wIAAQAAAAAAAQD6/wMAAQAAAAAAAQD6/wQAAQAAAAAAAQD6/wUAAQAAAAAAAgD6/wYAAQAAAAAAAgD6/wcAAQAAAAAAAgD7//j/AQAAAAAAAgD7//n/AQAAAAAAAgD7//r/AQAAAAAAAgD7//v/AQAAAAAAAQD7//z/AQAAAAAABQD7//3/AQAAAAAABQD7//7/AQAAAAAABQD7////AQAAAAAABQD7/wAAAQAAAAAABQD7/wEAAQAAAAAABQD7/wIAAQAAAAAABQD7/wMAAQAAAAAAAQD7/wQAAQAAAAAAAQD7/wUAAQAAAAAAAgD7/wYAAQAAAAAAAgD7/wcAAQAAAAAAAgD8//j/AQAAAAAAAgD8//n/AQAAAAAAAgD8//r/AQAAAAAAAgD8//v/AQAAAAAAAQD8//z/AQAAAAAAAQD8//3/AQAAAAAAAQD8//7/AQAAAAAABQD8////AQAAAAAAAQD8/wAAAQAAAAAAAQD8/wEAAQAAAAAABQD8/wIAAQAAAAAABQD8/wMAAQAAAAAABQD8/wQAAQAAAAAAAQD8/wUAAQAAAAAAAgD8/wYAAQAAAAAAAgD8/wcAAQAAAAAAAgD9//j/AQAAAAAAAgD9//n/AQAAAAAAAgD9//r/AQAAAAAAAQD9//v/AQAAAAAAAQD9//z/AQAAAAAAAQD9//3/AQAAAAAAAQD9//7/AQAAAAAAAQD9////AQAAAAAAAQD9/wAAAQAAAAAAAQD9/wEAAQAAAAAAAQD9/wIAAQAAAAAAAQD9/wMAAQAAAAAAAQD9/wQAAQAAAAAAAQD9/wUAAQAAAAAAAgD9/wYAAQAAAAAAAgD9/wcAAQAAAAAAAgD+//j/AQAAAAAAAgD+//n/AQAAAAAAAgD+//r/AQAAAAAAAQD+//v/AQAAAAAAAQD+//z/AQAAAAAAAQD+//3/AQAAAAAAAQD+//7/AQAAAAAAAQD+////AQAAAAAAAQD+/wAAAQAAAAAAAQD+/wEAAQAAAAAAAQD+/wIAAQAAAAAAAQD+/wMAAQAAAAAAAQD+/wQAAQAAAAAAAQD+/wUAAQAAAAAAAQD+/wYAAQAAAAAAAgD+/wcAAQAAAAAAAgD///j/AQAAAAAAAgD///n/AQAAAAAAAgD///r/AQAAAAAAAQD///v/AQAAAAAAAQD///z/AQAAAAAAAQD///3/AQAAAAAAAQD///7/AQAAAAAAAQD/////AQAAAAAAAQD//wAAAQAAAAAAAQD//wEAAQAAAAAAAQD//wIAAQAAAAAAAQD//wMAAQAAAAAAAQD//wQAAQAAAAAAAQD//wUAAQAAAAAAAgD//wYAAQAAAAAAAgD//wcAAQAAAAAAAgAAAPj/AQAAAAAAAgAAAPn/AQAAAAAAAgAAAPr/AQAAAAAAAQAAAPv/AQAAAAAAAQAAAPz/AQAAAAAAAQAAAP3/AQAAAAAAAQAAAP7/AQAAAAAAAQAAAP//AQAAAAAAAQAAAAAAAQAAAAAAAAAAAAEAAQAAAAAAAQAAAAIAAQAAAAAAAQAAAAMAAQAAAAAAAQAAAAQAAQAAAAAAAQAAAAUAAQAAAAAAAgAAAAYAAQAAAAAAAgAAAAcAAQAAAAAAAgABAPj/AQAAAAAAAgABAPn/AQAAAAAAAgABAPr/AQAAAAAAAQABAPv/AQAAAAAAAQABAPz/AQAAAAAAAQABAP3/AQAAAAAAAQABAP7/AQAAAAAAAQABAP//AQAAAAAAAQABAAAAAQAAAAAAAQABAAEAAQAAAAAAAQABAAIAAQAAAAAAAQABAAMAAQAAAAAAAQABAAQAAQAAAAAAAQABAAUAAQAAAAAAAgABAAYAAQAAAAAAAgABAAcAAQAAAAAAAgACAPj/AQAAAAAAAgACAPn/AQAAAAAAAgACAPr/AQAAAAAAAgACAPv/AQAAAAAAAQACAPz/AQAAAAAAAQACAP3/AQAAAAAAAQACAP7/AQAAAAAAAQACAP//AQAAAAAAAQACAAAAAQAAAAAAAQACAAEAAQAAAAAAAQACAAIAAQAAAAAAAQACAAMAAQAAAAAAAQACAAQAAQAAAAAAAQACAAUAAQAAAAAAAQACAAYAAQAAAAAAAgACAAcAAQAAAAAAAgADAPj/AQAAAAAAAgADAPn/AQAAAAAAAgADAPr/AQAAAAAAAQADAPv/AQAAAAAAAQADAPz/AQAAAAAAAQADAP3/AQAAAAAAAQADAP7/AQAAAAAAAQADAP//AQAAAAAAAQADAAAAAQAAAAAAAQADAAEAAQAAAAAAAQADAAIAAQAAAAAAAQADAAMAAQAAAAAAAQADAAQAAQAAAAAAAQADAAUAAQAAAAAAAQADAAYAAQAAAAAAAgADAAcAAQAAAAAAAgAEAPj/AQAAAAAAAgAEAPn/AQAAAAAAAgAEAPr/AQAAAAAAAgAEAPv/AQAAAAAAAQAEAPz/AQAAAAAAAQAEAP3/AQAAAAAAAQAEAP7/AQAAAAAAAQAEAP//AQAAAAAAAQAEAAAAAQAAAAAAAQAEAAEAAQAAAAAAAQAEAAIAAQAAAAAAAQAEAAMAAQAAAAAAAQAEAAQAAQAAAAAAAQAEAAUAAQAAAAAAAQAEAAYAAQAAAAAAAQAEAAcAAQAAAAAAAgAFAPj/AQAAAAAAAgAFAPn/AQAAAAAAAgAFAPr/AQAAAAAAAgAFAPv/AQAAAAAAAQAFAPz/AQAAAAAAAQAFAP3/AQAAAAAAAQAFAP7/AQAAAAAAAQAFAP//AQAAAAAAAQAFAAAAAQAAAAAAAQAFAAEAAQAAAAAAAQAFAAIAAQAAAAAAAQAFAAMAAQAAAAAAAQAFAAQAAQAAAAAAAQAFAAUAAQAAAAAAAgAFAAYAAQAAAAAAAgAFAAcAAQAAAAAAAgAGAPj/AQAAAAAAAgAGAPn/AQAAAAAAAgAGAPr/AQAAAAAAAgAGAPv/AQAAAAAAAgAGAPz/AQAAAAAAAgAGAP3/AQAAAAAAAgAGAP7/AQAAAAAAAQAGAP//AQAAAAAAAQAGAAAAAQAAAAAAAQAGAAEAAQAAAAAAAQAGAAIAAQAAAAAAAQAGAAMAAQAAAAAAAQAGAAQAAQAAAAAAAQAGAAUAAQAAAAAAAgAGAAYAAQAAAAAAAgAGAAcAAQAAAAAAAgAHAPj/AQAAAAAAAgAHAPn/AQAAAAAAAgAHAPr/AQAAAAAAAgAHAPv/AQAAAAAAAgAHAPz/AQAAAAAAAgAHAP3/AQAAAAAAAgAHAP7/AQAAAAAAAgAHAP//AQAAAAAAAgAHAAAAAQAAAAAAAQAHAAEAAQAAAAAAAQAHAAIAAQAAAAAAAQAHAAMAAQAAAAAAAgAHAAQAAQAAAAAAAgAHAAUAAQAAAAAAAgAHAAYAAQAAAAAAAgAHAAcAAQAAAAAAAgAIAPj/AQAAAAAAAgAIAPn/AQAAAAAAAgAIAPr/AQAAAAAAAgAIAPv/AQAAAAAAAgAIAPz/AQAAAAAAAgAIAP3/AQAAAAAAAgAIAP7/AQAAAAAAAgAIAP//AQAAAAAAAgAIAAAAAQAAAAAAAgAIAAEAAQAAAAAAAgAIAAIAAQAAAAAAAgAIAAMAAQAAAAAAAgAIAAQAAQAAAAAAAgAIAAUAAQAAAAAAAgAIAAYAAQAAAAAAAgAIAAcAAQAAAAAAAgAJAPj/AQAAAAAAAgAJAPn/AQAAAAAAAgAJAPr/AQAAAAAAAgAJAPv/AQAAAAAAAgAJAPz/AQAAAAAAAgAJAP3/AQAAAAAAAgAJAP7/AQAAAAAAAgAJAP//AQAAAAAAAgAJAAAAAQAAAAAAAgAJAAEAAQAAAAAAAgAJAAIAAQAAAAAAAgAJAAMAAQAAAAAAAgAJAAQAAQAAAAAAAgAJAAUAAQAAAAAAAgAJAAYAAQAAAAAAAgAJAAcAAQAAAAAAAgAKAPj/AQAAAAAAAgAKAPn/AQAAAAAAAgAKAPr/AQAAAAAAAgAKAPv/AQAAAAAAAgAKAPz/AQAAAAAAAgAKAP3/AQAAAAAAAgAKAP7/AQAAAAAAAgAKAP//AQAAAAAAAgAKAAAAAQAAAAAAAgAKAAEAAQAAAAAAAgAKAAIAAQAAAAAAAgAKAAMAAQAAAAAAAgAKAAQAAQAAAAAAAgAKAAUAAQAAAAAAAgAKAAYAAQAAAAAAAgAKAAcAAQAAAAAAAgALAPj/AQAAAAAAAgALAPn/AQAAAAAAAgALAPr/AQAAAAAAAgALAPv/AQAAAAAAAgALAPz/AQAAAAAAAgALAP3/AQAAAAAAAgALAP7/AQAAAAAAAgALAP//AQAAAAAAAgALAAAAAQAAAAAAAgALAAEAAQAAAAAAAgALAAIAAQAAAAAAAgALAAMAAQAAAAAAAgALAAQAAQAAAAAAAgALAAUAAQAAAAAAAgALAAYAAQAAAAAAAgALAAcAAQAAAAAAAgAMAPj/AQAAAAAAAgAMAPn/AQAAAAAAAgAMAPr/AQAAAAAAAgAMAPv/AQAAAAAAAgAMAPz/AQAAAAAAAgAMAP3/AQAAAAAAAgAMAP7/AQAAAAAAAgAMAP//AQAAAAAAAgAMAAAAAQAAAAAAAgAMAAEAAQAAAAAAAgAMAAIAAQAAAAAAAgAMAAMAAQAAAAAAAgAMAAQAAQAAAAAAAgAMAAUAAQAAAAAAAgAMAAYAAQAAAAAAAgAMAAcAAQAAAAAAAgANAPj/AQAAAAAAAgANAPn/AQAAAAAAAgANAPr/AQAAAAAAAgANAPv/AQAAAAAAAgANAPz/AQAAAAAAAgANAP3/AQAAAAAAAgANAP7/AQAAAAAAAgANAP//AQAAAAAAAgANAAAAAQAAAAAAAgANAAEAAQAAAAAAAgANAAIAAQAAAAAAAgANAAMAAQAAAAAAAgANAAQAAQAAAAAAAgANAAUAAQAAAAAAAgANAAYAAQAAAAAAAgANAAcAAQAAAAAAAgAOAPj/AQAAAAAAAgAOAPn/AQAAAAAAAgAOAPr/AQAAAAAAAgAOAPv/AQAAAAAAAgAOAPz/AQAAAAAAAgAOAP3/AQAAAAAAAgAOAP7/AQAAAAAAAgAOAP//AQAAAAAAAgAOAAAAAQAAAAAAAgAOAAEAAQAAAAAAAgAOAAIAAQAAAAAAAgAOAAMAAQAAAAAAAgAOAAQAAQAAAAAAAgAOAAUAAQAAAAAAAgAOAAYAAQAAAAAAAgAOAAcAAQAAAAAAAgAPAPj/AQAAAAAAAgAPAPn/AQAAAAAAAgAPAPr/AQAAAAAAAgAPAPv/AQAAAAAAAgAPAPz/AQAAAAAAAgAPAP3/AQAAAAAAAgAPAP7/AQAAAAAAAgAPAP//AQAAAAAAAgAPAAAAAQAAAAAAAgAPAAEAAQAAAAAAAgAPAAIAAQAAAAAAAgAPAAMAAQAAAAAAAgAPAAQAAQAAAAAAAgAPAAUAAQAAAAAAAgAPAAYAAQAAAAAAAgAPAAcAAQAAAAAAAgAQAPj/AQAAAAAAAgAQAPn/AQAAAAAAAgAQAPr/AQAAAAAAAgAQAPv/AQAAAAAAAgAQAPz/AQAAAAAAAgAQAP3/AQAAAAAAAgAQAP7/AQAAAAAAAgAQAP//AQAAAAAAAgAQAAAAAQAAAAAAAgAQAAEAAQAAAAAAAgAQAAIAAQAAAAAAAgAQAAMAAQAAAAAAAgAQAAQAAQAAAAAAAgAQAAUAAQAAAAAAAgAQAAYAAQAAAAAAAgAQAAcAAQAAAAAAAgA=")
tile_set = ExtResource("2_i68m5")
script = ExtResource("1_3viof")
pathfinding_enabled = true
debug_mode = 1
metadata/_custom_type_script = "uid://buj6ft1vvdf2f"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
script = ExtResource("4_2pem3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="Tile Layout" type="PanelContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/Tile Layout"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/MarginContainer/VBoxContainer/Tile Layout/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Tile Layout[/center]"
fit_content = true
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/Tile Layout/VBoxContainer"]
layout_mode = 2

[node name="LayoutVertical" type="CheckBox" parent="CanvasLayer/MarginContainer/VBoxContainer/Tile Layout/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_group = SubResource("ButtonGroup_2pem3")
text = "Vertical"

[node name="LayoutHorizontal" type="CheckBox" parent="CanvasLayer/MarginContainer/VBoxContainer/Tile Layout/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_group = SubResource("ButtonGroup_2pem3")
text = "Horizontal"

[node name="TileSetLayout" type="OptionButton" parent="CanvasLayer/MarginContainer/VBoxContainer/Tile Layout/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 6
popup/item_0/text = "Stacked"
popup/item_0/id = 0
popup/item_1/text = "Stacked Offset"
popup/item_1/id = 1
popup/item_2/text = "Stairs Right"
popup/item_2/id = 2
popup/item_3/text = "Stairs Down"
popup/item_3/id = 3
popup/item_4/text = "Diamond Right"
popup/item_4/id = 4
popup/item_5/text = "Diamond Down"
popup/item_5/id = 5

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Tile Layout/VBoxContainer/HBoxContainer/LayoutVertical" to="." method="_on_tile_layout_offset_vertical_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Tile Layout/VBoxContainer/HBoxContainer/LayoutHorizontal" to="." method="_on_tile_layout_offset_horizontal_pressed"]
[connection signal="item_selected" from="CanvasLayer/MarginContainer/VBoxContainer/Tile Layout/VBoxContainer/TileSetLayout" to="." method="_on_tile_layout_selected"]
